--- a/soccer/webapp/web/soccer.css
+++ b/soccer/webapp/web/soccer.css
@@ -11,7 +11,7 @@ label {
 }
 
 .example {
-    font-size: 11px;
+    font-size: 12px;
 }
 
 .logo {    
@@ -26,6 +26,7 @@ label {
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
+    margin-right: 5px;
     text-align: center;
 }
 
