--- a/soccer/webapp/web/soccer.css
+++ b/soccer/webapp/web/soccer.css
@@ -121,26 +121,16 @@ label {
     margin-bottom: 5px; 
     height: 90px;
 }
-footer {
-  text-align: center;
-  background: #363636;
-  color: #F4F3F3;
-  margin: auto;
-  padding: 80px 30px;
+.footer {
+    bottom: 0;
+    color: #444;
+    padding:25px 0;
 }
-footer ul {
-  margin: 0;
-  padding: 0;
+
+.footer ul {
+    text-align: center;
 }
-footer .sitelinks {
-  margin: 5px;
-  padding: 5px;
-}
-footer li {
-  display: inline-block;
-}
-footer a {
-  text-decoration: none;
-  color: #F4F3F3;
-  margin: 0 7px;
+
+.footer ul li a {
+    color: #444;
 }
