--- a/soccer_python/app/static/css/style.css
+++ b/soccer_python/app/static/css/style.css
@@ -2,12 +2,15 @@ a {
     color:#3a539b;
 }
 
+[disabled], [readonly] {
+    cursor: not-allowed;
+}
+
 .cursor-pointer {
     cursor: pointer;
 }
 
-
-  /** Adds a spin animation to the element */
+/** Adds a spin animation to the element */
 .spinner {
     animation: spin 1s infinite linear;
 }
