--- a/soccer/templates/user_error_email.html
+++ b/soccer/templates/user_error_email.html
@@ -10,7 +10,7 @@
 
 <body>
     Dear SOCcer User, <br>
-    <p>The file <b>{{filename}}</b> you uploaded using model version {{model_version}} on {{timestamp}} has been processed. You can view the results at: <a href="{{results_url}}">{{results_url}}</a>. This link will expire two weeks from today.</p>
+    <p>The file <b>{{file_name}}</b> you uploaded using model version {{model_version}} on {{timestamp}} could not be processed due to an internal error. Please contact the <a href="mailto:NCISOCcerWebAdmin@mail.nih.gov">NCISOCcerWebAdmin@mail.nih.gov</a> if this issue persists.</p>
     - SOCcer Team
 </body>
 
