--- a/soccer/static/css/style.css
+++ b/soccer/static/css/style.css
@@ -17,6 +17,20 @@ a {
     font-weight: 600;
 }
 
+select,
+input[type="file"],
+input[type="checkbox"],
+input[type="checkbox"]~label,
+input[type="radio"],
+input[type="radio"]~label
+{
+    cursor: pointer;
+}
+
+hr {
+    border-color: #eee;
+}
+
 .alert {
     border-radius: 0;
     border-top: none;
@@ -94,6 +108,15 @@ blockquote {
     border-color: #2a7ba5;
 }
 
+.btn-outline-light.focus, .btn-outline-light:focus {
+    text-decoration: underline;
+}
+
+.form-control {
+    border: none;
+    background-color: #f4f4f4;
+}
+
 .navbar-dark {
     background-color: #444;
 }
@@ -155,6 +178,14 @@ blockquote {
 
 .vh-100 {
     height: 100vh;
+}
+
+.shadow {
+    box-shadow: 0 .2rem 1rem rgba(0,0,0,.15)!important
+}
+
+.shadow-light {
+    box-shadow: 0 .125rem .9rem rgba(0,0,0,.075)!important;
 }
 
 /** Adds a spin animation to the element */
