/NCIATWP-1412: update background/border colors

--- a/soccer/static/css/style.css
+++ b/soccer/static/css/style.css
@@ -114,9 +114,17 @@ blockquote {
     text-decoration: underline;
 }
 
-.form-control {
-    border: none;
-    background-color: #f4f4f4;
+.border-light {
+    border: 1px solid #eee !important
+}
+
+.form-control.light {
+    border: 1px solid #eee;
+    background-color: white;
+}
+
+.form-control.light[disabled] {
+    background-color: #eee;
 }
 
 .navbar-dark {
