--- a/soccer/static/css/style.css
+++ b/soccer/static/css/style.css
@@ -124,35 +124,26 @@ blockquote {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    color: #eee;
-}
-
-.navbar-dark .navbar-nav .nav-link:focus,
-.navbar-dark .navbar-nav .nav-link:hover {
-    color: #fafafa;
-}
-
-.navbar-nav .nav-item .nav-link {
     color: white;
+    background-color: #444;
     border-bottom: 7px solid transparent;
     border-top: 7px solid transparent;
     font-size: 14px;
     transition: background-color .15s linear;
 }
 
-.navbar-nav .nav-item .nav-link:hover,
-.navbar-nav .nav-item .nav-link:focus {
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link.active {
     color: #2f2f2f !important;
     background-color: #fff;
 }
 
-.navbar-nav .nav-item .nav-link.active {
-    color: #2f2f2f;
-    background-color: #fff;
+.navbar-dark .navbar-nav .nav-link.active {
     border-bottom-color: #14819b;
 }
 
-.custom-tabs .nav-item .nav-link {
+.custom-tabs .nav-link {
     border: none;
     border-bottom: 2px solid transparent;
     padding: 8px;
