update email templates

--- a/soccer/templates/admin_error_email.html
+++ b/soccer/templates/admin_error_email.html
@@ -13,7 +13,7 @@
     <p>An error occured while processing file id: <b>{{file_id}}</b></p>
 
     <p><b>Parameters</b></p>
-    <p><pre>{{data}}</pre></p>
+    <p><pre>{{params}}</pre></p>
 
     <p><b>Exception Information</b></p>
     <p><pre>{{exception_info}}</pre></p>
