--- a/soccer/templates/user_email.html
+++ b/soccer/templates/user_email.html
@@ -12,7 +12,7 @@
     Dear SOCcer User, <br>
     <p>The file <b>{{original_filename}}</b> you uploaded using model version {{model_version}} on {{timestamp}} has been processed. You can view the results at: <a href="{{results_url}}">{{results_url}}</a>. This link will expire two weeks from today.</p>
     - SOCcer Team <br>
-    <p>(Note: Please do not reply to this email. If you need assistance, please contact <a href="mailto:{{admin}}">{{admin}}</a>)</p>
+    <p>(Note: Please do not reply to this email. If you need assistance, please contact <a href="mailto:{{adminSupport}}">{{adminSupport}}</a>)</p>
 
 </body>
 
