--- a/soccer/templates/user_error_email.html
+++ b/soccer/templates/user_error_email.html
@@ -10,7 +10,7 @@
 
 <body>
     Dear SOCcer User, <br>
-    <p>The file <b>{{original_filename}}</b> you uploaded using model version {{model_version}} on {{timestamp}} could not be processed due to an internal error. Please contact <a href="mailto:{{admin}}">{{admin}}</a> if this issue persists.</p>
+    <p>The file <b>{{original_filename}}</b> you uploaded using model version {{model_version}} on {{timestamp}} could not be processed due to an internal error. Please contact <a href="mailto:{{adminSupport}}">{{adminSupport}}</a> if this issue persists.</p>
     - SOCcer Team
 </body>
 
