return less descriptive errors

--- a/server/templates/user_error_email.html
+++ b/server/templates/user_error_email.html
@@ -10,8 +10,7 @@
 
 <body>
     Dear SOCcer User, <br>
-    <p>The file <b>{{filename}}</b> you uploaded using model version {{model}} on {{timestamp}} (job id: {{ job_id }}) could not be processed due to the following error(s). Please contact <a href="mailto:{{email_admin}}">{{email_admin}}</a> if this issue persists.</p>
-    <pre>{{ error }}</pre>
+    <p>The file <b>{{filename}}</b> you uploaded using model version {{model}} on {{timestamp}} (job id: {{ job_id }}) could not be processed due to an internal error. Please contact <a href="mailto:{{email_admin}}">{{email_admin}}</a> if this issue persists.</p>
     - SOCcer Team
 </body>
 
