--- a/client/soccer.css
+++ b/client/soccer.css
@@ -156,3 +156,12 @@ blockquote {
   --bs-table-color: #fff;
   --bs-table-bg: var(--bs-primary-dark);
 }
+
+.fs-extra-small {
+  font-size: 0.75rem;
+}
+
+.img-h75 {
+  max-height: 25vh;
+  object-fit: contain;
+}
